// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar > Avatar should render with a specific size > AvatarLargeSize 1`] = `
<DocumentFragment>
  <div
    class="sc-bdDsCe jhyYtP undefined"
  >
    <div
      class="sc-gtcBCx jFqmuA"
      data-testid="avatarIcon"
    >
      <div
        class="sc-dkXsAU eUWame"
      >
        <div
          class="sc-hKVpXn bxpSqk avatar-button"
        >
          <div
            class="sc-jSppWd hPvlfQ"
            data-testid="user-initials"
          >
            JD
          </div>
        </div>
        <label
          for="img"
        >
            
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > Avatar should render with a specific size > AvatarSmallSize 1`] = `
<DocumentFragment>
  <div
    class="sc-bdDsCe dbdEVx undefined"
  >
    <div
      class="sc-gtcBCx jFqmuA"
      data-testid="avatarIcon"
    >
      <div
        class="sc-dkXsAU eUWame"
      >
        <div
          class="sc-hKVpXn gxRjUc avatar-button"
        >
          <div
            class="sc-jSppWd kyNopU"
            data-testid="user-initials"
          >
            JD
          </div>
        </div>
        <label
          for="img"
        >
            
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
